--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>we are offline</h1>
   </section>
 
-  <div>
+  <div id="background">
     <section class="bjelilo" id="bjelilo">
     <div class="hair" id="crosshair-h"></div>
     <div class="hair" id="crosshair-v"></div>
@@ -19,12 +19,12 @@
       <h3 id="naslov">Studio offline</h3>
         <div class="navigacija">
           <ul>
-            <li><a href="https://google.com" target="_blank">About</a></li>
-            <li><a href="#bjelilo">Projects</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Projects</a></li>
           </ul>
           <ul>
-            <li><a href="#bjelilo">Lab</a></li>
-            <li><a href="#bjelilo">Email</a></li>
+            <li><a href="#">Lab</a></li>
+            <li><a href="#">Email</a></li>
           </ul>
         </div>
       </header>
