Bazne funkcije odradjene

--- a/index.html
+++ b/index.html
@@ -23,11 +23,38 @@
             <li><a href="#">Projects</a></li>
           </ul>
           <ul>
-            <li><a href="#">Lab</a></li>
+            <li><a href="#" id="lab">Lab</a></li>
             <li><a href="#">Email</a></li>
           </ul>
         </div>
       </header>
+
+      <div class="grid-container">
+        <div class="grid-item1">
+          <figure>
+            <img src="img/plus.png" alt="plus">
+            <span>some text here ?</span>
+          </figure>
+        </div>
+        <div class="grid-item2">
+          <figure>
+            <img src="img/plus.png" alt="plus">
+            <span>some text here ?</span>
+          </figure>
+        </div>
+        <div class="grid-item3">
+          <figure>
+            <img src="img/plus.png" alt="plus">
+            <span>some text here ?</span>
+          </figure>
+        </div>
+        <div class="grid-item4">
+          <figure>
+            <img src="img/plus.png" alt="plus">
+            <span>some text here ?</span>
+          </figure>
+        </div>
+      </div>
     </section>
   </div>
 
